# cg-draw

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  canvas.hpp  example.yaml  example0.yaml  example01.yml  example02.yml  example1.yaml  install-yaml-cpp-locally.sh
docs/html/: annotated.html  canvas_8cpp.html  canvas_8cpp__incl.dot  canvas_8cpp__incl.md5  canvas_8hpp_source.html  classCanvas.html  classes.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5280bb524ed5294135fd93e0b12dbd44.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7f7e439ba0927089503219129b4cf038.html  dir_cf779efadf30e9c7d82da7dbe2eb33f7.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  md_README.html  menudata.js  pages.html  structColor.html  structLine.html  structLine__coll__graph.dot  structLine__coll__graph.md5  structPoint.html  utils_8hpp_source.html
docs/html/search/: all_1.js  all_4.js  all_5.js  all_6.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
include/: canvas.hpp  utils.hpp
lib/: coisa
lib/pkgconfig/: yaml-cpp.pc
src/: canvas.cpp  driver.cpp
